[package]
name = "screep_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
fern = "0.6"
humantime = "2.1"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
dotenvy_macro = "0.15"
