[package]
name = "screep_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
log = "0.4"
fern = "0.6"
humantime = "2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
dotenvy_macro = "0.15"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
