[package]
edition = "2021"
name = "codeforce"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
gnuplot = "0.0"

[[bench]]
name = "bench"
harness = false
