[package]
name = "A_Minimal_Rust_Kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
bootloader = "0.9.3"

# [build]
# target = "x86_64-blog_os.json"


[package.metadata.bootimage]
build-command = ["xbuild"]